--- a/app/src/main/res/layout/select_graph.xml
+++ b/app/src/main/res/layout/select_graph.xml
@@ -49,7 +49,7 @@
         android:textColor="#ffffff" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/graphing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/button"
@@ -66,11 +66,11 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button2"
+        android:layout_alignEnd="@+id/graphing"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/button2"
-        android:layout_below="@+id/button2"
+        android:layout_alignRight="@+id/graphing"
+        android:layout_below="@+id/graphing"
         android:layout_marginTop="42dp"
         android:background="#3f51b5"
         android:text="--> Show Accelerometer Graph of Journey"
