--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <!-- activity view -->
         <RelativeLayout
@@ -25,13 +26,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left|start"
-            android:background="#fff">
-
+            android:background="@color/DarkWhite">
             <ListView
                 android:id="@+id/left_drawer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#fff"
                 android:divider="#eee"
                 android:dividerHeight="1dp" />
         </RelativeLayout>
