--- a/app/src/main/res/layout/fragment_map_view.xml
+++ b/app/src/main/res/layout/fragment_map_view.xml
@@ -1,6 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,5 +11,16 @@
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="match_parent" />
-</RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/currentSpeed"
+        android:layout_width="match_parent"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:layout_height="match_parent"
+        android:text="Current Speed : 0 km/h"
+        android:textSize="20sp"/>
+</LinearLayout>
