--- a/app/src/main/res/layout/fragment_realtime_information.xml
+++ b/app/src/main/res/layout/fragment_realtime_information.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ColorPrimary"
+    android:layout_weight="1">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/Gray" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="50dp"
     android:orientation="horizontal">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,7 +35,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="4dp"
                 android:paddingTop="10dp"
                 app:endValue="100"
                 app:pointEndColor="@color/White"
@@ -45,7 +55,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="5dp"
                 android:paddingTop="10dp"
                 app:endValue="100"
                 app:pointEndColor="@color/White"
@@ -65,7 +75,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="5dp"
                 android:paddingTop="10dp"
                 app:endValue="17000"
                 app:pointEndColor="@color/White"
@@ -147,6 +157,40 @@
                 android:textColor="#ffffff" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/throttle"
+                android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/engine_load"
+                android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/throttle"
+                android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+        </LinearLayout>
+
     </FrameLayout>
 
     <FrameLayout
@@ -168,7 +212,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="4dp"
                 android:paddingTop="10dp"
                 app:endValue="17000"
                 app:pointEndColor="@color/White"
@@ -188,7 +232,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="5dp"
                 android:paddingTop="10dp"
                 app:endValue="17000"
                 app:pointEndColor="@color/White"
@@ -208,7 +252,7 @@
                 android:layout_weight="1"
                 android:paddingBottom="0dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingRight="5dp"
                 android:paddingTop="10dp"
                 app:endValue="17000"
                 app:pointEndColor="@color/White"
@@ -288,5 +332,39 @@
                 android:text="Fuel Level"
                 android:textColor="#ffffff" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/mass_flow"
+                android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/manifold_pressure"
+                android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/fuel_level"
+                android:layout_weight="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"/>
+        </LinearLayout>
     </FrameLayout>
 </LinearLayout>
+</FrameLayout>
