--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,6 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/secure_connect_scan"
-        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
         android:showAsAction="ifRoom"
         android:title="@string/secure_connect" />
 
@@ -23,8 +22,8 @@
         android:showAsAction="never"
         android:title="@string/discoverable" />
     <item
-        android:id="@+id/secure_connect_scann"
-        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
+        android:id="@+id/btConnect"
+        android:icon="@drawable/bluetooth"
         android:title="@string/secure_connect"
         app:showAsAction="ifRoom" />
 </menu>
